@@ -122,8 +122,8 @@ readOOO <- FunctionGenerator(function(unoconvOptions = "", ...) {
         tmp <- tempfile()
         # Unfortunately unoconv does not have an output file option and writes the output to the same directory as the input
         # In addition conversion to stdout may corrupt the zip file (odt) if writing it out via writeLines()
-        if (!all(file.copy(eval(elem$uri), sprintf("%s.oo", tmp))))
-            stop(sprintf("cannot copy %s", eval(elem$uri)))
+        if (!all(file.copy(elem$uri, sprintf("%s.oo", tmp))))
+            stop(sprintf("cannot copy %s", elem$uri))
         system(paste("unoconv -f odt", sprintf("%s.oo", tmp)))
         meta.xml <- unzip(sprintf("%s.odt", tmp), "meta.xml", exdir = dirname(tmp))[1]
 
@@ -131,7 +131,7 @@ readOOO <- FunctionGenerator(function(unoconvOptions = "", ...) {
 
         root <- XML::xmlRoot(XML::xmlParse(meta.xml))
 
-        content <- system(paste("unoconv -f txt --stdout", shQuote(eval(elem$uri))), intern = TRUE)
+        content <- system(paste("unoconv -f txt --stdout", shQuote(elem$uri)), intern = TRUE)
         author <- XML::xpathSApply(root, "/office:document-meta/office:meta/dc:creator", XML::xmlValue)
         datetimestamp <- as.POSIXlt(XML::xpathSApply(root, "/office:document-meta/office:meta/dc:date", XML::xmlValue))
 
@@ -143,7 +143,7 @@ readOOO <- FunctionGenerator(function(unoconvOptions = "", ...) {
 readDOC <- FunctionGenerator(function(AntiwordOptions = "", ...) {
     AntiwordOptions <- AntiwordOptions
     function(elem, language, id) {
-        content <- system(paste("antiword", AntiwordOptions, shQuote(eval(elem$uri))), intern = TRUE)
+        content <- system(paste("antiword", AntiwordOptions, shQuote(elem$uri)), intern = TRUE)
         PlainTextDocument(content, id = id, language = language)
     }
 })
@@ -153,7 +153,7 @@ readPDF <- FunctionGenerator(function(PdfinfoOptions = "", PdftotextOptions = ""
     PdfinfoOptions <- PdfinfoOptions
     PdftotextOptions <- PdftotextOptions
     function(elem, language, id) {
-        meta <- system(paste("pdfinfo", PdfinfoOptions, shQuote(eval(elem$uri))), intern = TRUE)
+        meta <- system(paste("pdfinfo", PdfinfoOptions, shQuote(elem$uri)), intern = TRUE)
         heading <- gsub("Title:[[:space:]]*", "", grep("Title:", meta, value = TRUE))
         author <- gsub("Author:[[:space:]]*", "", grep("Author:", meta, value = TRUE))
         datetimestamp <- strptime(gsub("CreationDate:[[:space:]]*", "",
@@ -163,7 +163,7 @@ readPDF <- FunctionGenerator(function(PdfinfoOptions = "", PdftotextOptions = ""
         description <- gsub("Subject:[[:space:]]*", "", grep("Subject:", meta, value = TRUE))
         origin <- gsub("Creator:[[:space:]]*", "", grep("Creator:", meta, value = TRUE))
 
-        content <- system(paste("pdftotext", PdftotextOptions, shQuote(eval(elem$uri)), "-"), intern = TRUE)
+        content <- system(paste("pdftotext", PdftotextOptions, shQuote(elem$uri), "-"), intern = TRUE)
         PlainTextDocument(content, author, datetimestamp, description, heading, id, origin, language)
      }
 })
