@@ -26,10 +26,8 @@ readPDF(PdfinfoOptions = "", PdftotextOptions = "", \dots)
 }
 \value{
   A \code{function} with the signature \code{elem, language, id}:
-  \item{elem}{A \code{list} with the two named elements \code{content}
-    and \code{uri}. The first element must hold the document to
-    be read in, the second element must hold a call to extract this
-    document. The call is evaluated upon a request for load on demand.}
+  \item{elem}{A \code{list} with the named element \code{uri} of type
+  \code{character} which must hold a valid file name.}
   \item{language}{A \code{character} vector giving the text's language.}
   \item{id}{A \code{character} vector representing a unique identification
     string for the returned text document.}
