@@ -20,13 +20,11 @@ readPlain(\dots)
 }
 \value{
   A \code{function} with the signature \code{elem, language, id}:
-  \item{elem}{A \code{list} with the two named elements \code{content}
-    and \code{uri}. The first element must hold the document to
-    be read in, the second element must hold a call to extract this
-    document. The call is evaluated upon a request for load on demand.}
+  \item{elem}{A \code{list} with the named element \code{content} which
+    must hold the document to be read in.}
   \item{language}{A \code{character} vector giving the text's language.}
-  \item{id}{A \code{character} vector representing a unique identification
-    string for the returned text document.}
+  \item{id}{A \code{character} vector representing a unique
+    identification string for the returned text document.}
   The function returns a \code{PlainTextDocument} representing
   \code{content}.
 }
