@@ -10,10 +10,8 @@ readReut21578XML(elem, language, id)
 readReut21578XMLasPlain(elem, language, id)
 }
 \arguments{
-  \item{elem}{A \code{list} with the two named elements \code{content}
-    and \code{uri}. The first element holds the document to
-    be read in, the second element holds a call to extract this
-    document. The call is evaluated upon a request for load on demand.}
+  \item{elem}{A \code{list} with the named element \code{content} which
+    must hold the document to be read in.}
   \item{language}{A \code{character} vector giving the text's language.}
   \item{id}{A \code{character} vector representing a unique identification
     string for the returned text document.}
